# ZKGraph

./: Cargo.toml  README.md
src/: chips.rs  lib.rs  util.rs
src/chips/: is_zero.rs  lessthan_or_equal_generic.rs
src/circuit/: bfs_hop2.rs  bfs_hop3.rs  bfs_hop4.rs  bfs_hop5.rs  bfs_hop6.rs  bi_sssp_from_ic1.rs  ic_1.rs  ic_13.rs  ic_1_single_knows.rs  ic_2.rs  ic_9.rs  is_1.rs  is_1_csr.rs  is_3.rs  is_4.rs  is_5.rs  knows_bi_from_is3.rs  knows_single_from_is3.rs  mod.rs  multi_sssp.rs  preprocess_knows_bi_from_is3.rs  preprocess_sssp_from_ic1.rs  set_expand.rs  single_sssp_from_ic1.rs  test.rs  utils.rs
src/data/: csr.rs
src/data/message_fact/120k/: comment_hasCreator_person.csv  post_hasCreator_person.csv
src/data/message_fact/180k/: post_hasCreator_person.csv
src/data/message_fact/60k/: comment_hasCreator_person.csv  post.csv  post_hasCreator_person.csv
src/data/person_fact/60k/: person_knows_person_0_0.csv
