[package]
name = "zkgraph"
version = "0.1.0"
edition = "2021"

[features]
dev-graph = ["halo2_proofs/dev-graph", "plotters"]
plotters = ["dep:plotters"]

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git"}
halo2_backend = { git = "https://github.com/privacy-scaling-explorations/halo2.git"}
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
num-bigint = "0.4.4"
hex = "0.4.3"
arrayvec = "0.7.2"
rand = "0.8"
group = "0.12"
# pasta_curves = "0.4"
ff = "0.13"
num-traits = "0.2"
itertools = "0.10.0"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
array-init = "2.1.0"
chrono = "0.4"
halo2curves = { version = "0.6.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rand_xorshift = "0.3"
bincode = "1.3.3"
fixedbitset = { version = "0.5.7", default-features = false }
tempfile = "3.3"
rayon = "1.8"
clap = { version = "4.5", features = ["derive"] }